[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="edtPath" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 670.0
margin_right = 500.0
margin_bottom = 694.0
text = "/home/gilson/.config/MangoHud/MangoHud.conf"

[node name="btSalvar" type="Button" parent="."]
margin_left = 529.0
margin_top = 672.0
margin_right = 578.0
margin_bottom = 692.0
text = "Salvar"

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 650.0
margin_right = 135.0
margin_bottom = 664.0
text = "Caminho do arquivo"

[node name="scrollC" type="ScrollContainer" parent="."]
margin_left = 24.0
margin_top = 18.0
margin_right = 360.0
margin_bottom = 327.0

[node name="grid" type="GridContainer" parent="scrollC"]
margin_right = 336.0
margin_bottom = 309.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 10.0
margin_top = 335.0
margin_right = 648.0
margin_bottom = 646.0

[connection signal="pressed" from="btSalvar" to="." method="_on_btSalvar_pressed"]
